# mojom-language-support

mojom-lsp/: Cargo.toml
mojom-lsp/src/server/: asyncrpc.rs  asyncserver.rs  clangd.rs  definition.rs  diagnostic.rs  document_symbol.rs  imported_files.rs  initialization.rs  messagesender.rs  mod.rs  mojomast.rs  protocol.rs  rpc.rs  semantic.rs  server.rs  workspace.rs
mojom-lsp/src/syntax/: parser.rs  syntax.rs
vscode-mojom/: package-lock.json  package.json
vscode-mojom/client/: package-lock.json  package.json
vscode-mojom/client/src/: extension.ts
