[package]
name = "mojom-lsp"
version = "0.1.3"
authors = ["The Chromium Authors"]
edition = "2018"
description = "A language server for Mojom IDL"
license = "Apache-2.0"
repository = "https://github.com/GoogleChromeLabs/mojom-language-support"
readme = "README.md"

[[bin]]
name = "mojom-lsp"

[[bin]]
name = "chromium-mojom-check"
required-features = ["chromium-mojom-check"]

[features]
chromium-mojom-check = ["glob"]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
env_logger = { version = "0.9.3" }
log = "0.4.17"
lsp-types = "0.93.2"
pest = "2.4.1"
pest_derive = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

glob = { version = "0.3", optional = true }

tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "fs", "io-std", "io-util", "process", "sync", "macros"]}
